# PyFake-API-Server

./: .pre-commit-config.yaml  Dockerfile  action.yaml  mkdocs.yml  pyproject.toml  sonar-project.properties  versions.json
.cache/plugin/git-committers/: page-authors.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: request-a-feature-or-change.yaml
.github/tag_and_release/: release-title.md
.github/workflows/: action-e2e-test.yaml  bot-pr.yaml  cd.yaml  ci.yaml  docker.yaml  documentation.yaml  rw_build_and_test.yaml  rw_checking_deployment_state.yaml
0.4.1/: 404.html  index.html  sitemap.xml
0.4.1/command-line-usage/: index.html
0.4.1/command-line-usage/rest-server/: index.html
0.4.1/configure-references/config-basic-info/: index.html
0.4.1/configure-references/mocked-apis/: index.html
0.4.1/development/: index.html
0.4.1/development/contributing/: index.html
0.4.1/development/how-it-works/: index.html
0.4.1/development/software-technical-details/: index.html
0.4.1/getting-started/configure-your-api/: index.html
0.4.1/getting-started/installation/: index.html
0.4.1/getting-started/setup-web-server/: index.html
0.4.1/getting-started/version-requirements/: index.html
0.4.1/release_note/: index.html
0.4.1/release_note/version_0xx/: index.html
0.4.2/: 404.html  index.html  sitemap.xml
0.4.2/action-usage/: index.html
0.4.2/action-usage/rest-server/: index.html
0.4.2/command-line-usage/: index.html
0.4.2/command-line-usage/rest-server/: index.html
0.4.2/configure-references/config-basic-info/: index.html
0.4.2/configure-references/mocked-apis/: index.html
0.4.2/development/: index.html
0.4.2/development/contributing/: index.html
0.4.2/development/how-it-works/: index.html
0.4.2/development/software-technical-details/: index.html
0.4.2/getting-started/configure-your-api/: index.html
0.4.2/getting-started/installation/: index.html
0.4.2/getting-started/setup-web-server/: index.html
0.4.2/getting-started/version-requirements/: index.html
0.4.2/release_note/: index.html
0.4.2/release_note/version_0xx/: index.html
docs/: index.md
docs/action-usage/: index.md  rest-server.md
docs/command-line-usage/rest-server/: subcmd-run.md
docs/development/contributing/: reporting-a-bug.md
docs/getting-started/: version-requirements.md
docs/release_note/: version_0xx.md
fake_api_server/command/_base/: options.py
fake_api_server/model/: subcmd_common.py
fake_api_server/model/api_config/: __init__.py  _base.py  base.py  format.py  item.py  value.py  variable.py
fake_api_server/model/rest_api_doc_config/: _model_adapter.py
fake_api_server/server/: mock.py
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/action-usage/: index.html
latest/action-usage/rest-server/: index.html
latest/command-line-usage/: index.html
latest/command-line-usage/rest-server/: index.html
latest/configure-references/config-basic-info/: index.html
latest/configure-references/mocked-apis/: index.html
latest/development/: index.html
latest/development/contributing/: index.html
latest/development/how-it-works/: index.html
latest/development/software-technical-details/: index.html
latest/getting-started/installation/: index.html
latest/release_note/: index.html
scripts/: run_all_tests.sh
scripts/ci/: chk_pr_list.sh  verify_fake_api_server_state.sh
test/: _values.py
(+172 files in other folders)
