[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "fake-api-server"
version = "0.4.2"
description = "🕸🤖👺 A Python tool to fake API server, e.g., RESTful API server, easily and humanly without any coding."
authors = [
    { name = "Liu, Bryant", email = "chi10211201@cycu.org.tw" }
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["fake", "API", "web", "server", "fake server", "fake API server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "PyYAML (>=6.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
]

[tool.poetry]
packages = [
    { include = "fake_api_server/" },
]

[project.optional-dependencies]
mini = [
    "PyYAML (>=6.0)",
]
fastapi = [
    "PyYAML (>=6.0)",
    "fastapi[all] (>=0.110,<0.116)",
    "uvicorn[standard] (>=0.29,<0.34)",
]
flask = [
    "PyYAML (>=6.0)",
    "Flask (>=3.0.2)",
    "gunicorn (>=21.2,<24.0)",
]
all = [
    "PyYAML (>=6.0)",
    "fastapi[all] (>=0.110,<0.116)",
    "uvicorn[standard] (>=0.29,<0.34)",
    "Flask (>=3.0.2)",
    "gunicorn (>=21.2,<24.0)",
]

[project.urls]
Homepage = "https://github.com/Chisanan232/PyFake-API-Server"
Documentation = "https://chisanan232.github.io/PyFake-API-Server/stable/"
Repository = "https://github.com/Chisanan232/PyFake-API-Server"
Changelog = "https://chisanan232.github.io/PyFake-API-Server/latest/release_note/"
"Project Management" = "https://app.clickup.com/9018752317/v/f/90183126979/90182605225"

[project.scripts]
fake = "fake_api_server.runner:run"

# TODO: Let the dependencies for development to be optional
#[tool.poetry.group.dev]
#optional = true

[tool.poetry.group.dev.dependencies]
# Dependency for test
pytest = "^8.4.2"
pytest-cov = "^6.2.1"
#pytest-html = "^4.1.1"
pytest-rerunfailures = "^16.0"
coverage = "^7.10"
# Dependency for CI
pre-commit = "^4.3.0"
pylint = "^3.3.8"
mypy = "^1.17.1"
# Dependency of web framework Flask
Flask = "^3.1.2"
gunicorn = ">=21.2,<24.0"
# Dependency of web framework FastAPI
fastapi = {extras = ["all"], version = ">=0.110,<0.116"}
uvicorn = {extras = ["standard"], version = ">=0.29,<0.34"}
types-PyYAML = "^6.0.12.20250822"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.6.15"
mkdocs-autorefs = "^1.4.3"
mkdocstrings = ">=0.24.1,<0.31.0"
mkdocstrings-python = "^1.18.2"
mike = "^2.1.3"
mkdocs-git-revision-date-localized-plugin = "^1.4.7"
mkdocs-git-committers-plugin-2 = {version = "^2.5.0", python = ">=3.8,<4"}
